fix(post): adjust topic alignment (#333)

--- a/style/post.css
+++ b/style/post.css
@@ -454,6 +454,7 @@
   padding-top: 32px;
   margin-left: 32px;
   margin-right: 32px;
+  text-align: left;
 }
 
 
